--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,18 +1,26 @@
 <footer op-60>
   <p mt-6 text-sm text-slate>
-    <span pr-1>Made by</span>
+    <span pr-1>👏</span>
     <a
-    border-b border-slate border-none hover:border-dashed
-      href="https://ddiu.io" target="_blank"
+      border-b
+      border-slate
+      border-none
+      hover:border-dashed
+      href="https://yesmore.cc"
+      target="_blank"
     >
-      Diu
+      yesmore
     </a>
     <span px-1>|</span>
     <a
-      border-b border-slate border-none hover:border-dashed
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      border-b
+      border-slate
+      border-none
+      hover:border-dashed
+      href="https://github.com/yesmore/QA"
+      target="_blank"
     >
-      Source Code
+      Github
     </a>
   </p>
 </footer>
