--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,15 @@
 ---
-import Logo from './Logo.astro'
+import Logo from "./Logo.astro";
 ---
 
 <header>
   <Logo />
   <div class="flex items-center mt-2">
     <span class="text-2xl text-slate font-extrabold mr-1">ChatGPT</span>
-    <span class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600">Demo</span>
+    <span
+      class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
+      >Q & A</span
+    >
   </div>
-  <p mt-1 text-slate op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
+  <p mt-1 text-slate op-60>Based on OpenAI API.</p>
 </header>
