--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,27 +8,32 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<script async defer data-website-id="918699fd-0704-408b-bda3-3f28c1bd9d1b" src="https://stats.ddiu.io/app.js"></script>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <script
+      async
+      defer
+      data-website-id="918699fd-0704-408b-bda3-3f28c1bd9d1b"
+      src="https://stats.ddiu.io/app.js"
+    ></script>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #171921;
-		color: #ffffff;
-	}
-	main {
-		max-width: 70ch;
-		margin: 0 auto;
-		padding: 6rem 2rem 4rem;
-	}
+  html {
+    font-family: system-ui, sans-serif;
+    background-color: #171921;
+    color: #ffffff;
+  }
+  main {
+    max-width: 70ch;
+    margin: 0 auto;
+    padding: 6rem 2rem 4rem;
+  }
 </style>
