--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import "katex/dist/katex.min.css";
 import "highlight.js/styles/atom-one-dark.css";
 ---
 
-<Layout title="ChatGPT QA">
+<Layout title="ChatGPT Q&A">
   <main>
     <Header />
     <Generator client:load />
