--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@
     </a>
   </p>
   <a
-    class="flex max-w-fit items-center justify-center space-x-2 rounded-md border border-gray-300 bg-fan1 px-4 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:bg-fan"
+    class="mt-4 flex max-w-fit items-center justify-center space-x-2 rounded-md border border-gray-300 bg-fan1 px-4 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:bg-fan"
     href="https://www.buymeacoffee.com/yesmore"
     target="_blank"
     rel="noopener noreferrer"
