--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
       href="https://yesmore.cc"
       target="_blank"
     >
-      yesmore
+      Yesmore
     </a>
     <span px-1>|</span>
     <a
