support custom key

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer op-60>
   <p mt-6 text-sm text-slate>
-    <span pr-1>👏</span>
+    <span pr-1>Here</span>
     <a
       border-b
       border-slate
@@ -9,7 +9,7 @@
       href="https://yesmore.cc"
       target="_blank"
     >
-      Yesmore
+      yesmore
     </a>
     <span px-1>|</span>
     <a
@@ -22,28 +22,28 @@
     >
       Github
     </a>
-  </p>
-  <a
-    class="mt-4 flex max-w-fit items-center justify-center space-x-2 rounded-md border border-gray-300 bg-fan1 px-4 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:bg-fan"
-    href="https://www.buymeacoffee.com/yesmore"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    <svg
-      stroke="currentColor"
-      fill="currentColor"
-      stroke-width="0"
-      viewBox="0 0 512 512"
-      focusable="false"
-      class="text-[#e53e3e]"
-      height="18"
-      width="18"
-      xmlns="http://www.w3.org/2000/svg"
+    <a
+      class="mt-3 flex max-w-fit items-center justify-center space-x-2 rounded-md border border-gray-800 px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-gray-300"
+      href="https://www.buymeacoffee.com/yesmore"
+      target="_blank"
+      rel="noopener noreferrer"
     >
-      <path
-        d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
-      ></path>
-    </svg>
-    <p>Buy me a coffee</p>
-  </a>
+      <svg
+        stroke="currentColor"
+        fill="currentColor"
+        stroke-width="0"
+        viewBox="0 0 512 512"
+        focusable="false"
+        class="text-[#e53e3e]"
+        height="18"
+        width="18"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+        ></path>
+      </svg>
+      <span text-slate>Buy me a coffee</span>
+    </a>
+  </p>
 </footer>
