--- a/src/message.css
+++ b/src/message.css
@@ -17,10 +17,16 @@
   text-align: left;
 }
 
-.message table th, .message table td {
+.message table th,
+.message table td {
   padding: 0.6rem 1rem;
 }
 
 .message table tbody tr:last-of-type {
   border-bottom: 2px solid #64748b40;
+}
+
+.ipt::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
