--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer op-60>
-  <p mt-6 text-sm text-slate>
+  <p mt-6 text-sm text-slate-800>
     <span pr-1>Here</span>
     <a
       border-b
@@ -23,7 +23,7 @@
       Github
     </a>
     <a
-      class="mt-3 flex max-w-fit items-center justify-center space-x-2 rounded-md border border-gray-800 px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-gray-300"
+      class="mt-3 flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-gray-300 bg-amber px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-gray-500 hover:bg-amber-300"
       href="https://www.buymeacoffee.com/yesmore"
       target="_blank"
       rel="noopener noreferrer"
@@ -43,7 +43,7 @@
           d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
         ></path>
       </svg>
-      <span text-slate>Buy me a coffee</span>
+      <span text-slate-800>Buy me a coffee</span>
     </a>
   </p>
 </footer>
