--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,14 @@
 ---
-import Logo from "./Logo.astro";
+import Logo from "./icons/logo.png";
 ---
 
 <header>
   <div class="flex items-center mt-2">
+    <img mr-1 w-18 src={Logo} />
     <span
       class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
       >Q&A</span
     >
   </div>
-  <p mt-1 text-slate op-60>Based on OpenAI API.</p>
+  <p mt-1 text-black op-60>Based on OpenAI API.</p>
 </header>
