--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,19 +4,37 @@ import Github from "./icons/Github";
 
 <footer op-60>
   <div mt-6 text-sm text-slate-800>
-    <span>Based on OpenAI API</span>
-    <span px-1>|</span>
-    <span>By</span>
-    <a
-      border-b
-      border-slate
-      border-none
-      hover:border-dashed
-      href="https://yesmore.cc"
-      target="_blank"
-    >
-      yesmore
-    </a>
+    <div flex justify-between>
+      <p>
+        <span>Based on OpenAI API</span>
+        <span px-1>|</span>
+        <span>By</span>
+        <a
+          border-b
+          border-slate
+          border-none
+          hover:border-dashed
+          href="https://yesmore.cc"
+          target="_blank"
+        >
+          yesmore
+        </a>
+      </p>
+
+      <p>
+        <a
+          border-b
+          border-slate
+          border-none
+          hover:border-dashed
+          href="https://yesmore.cc"
+          target="_blank"
+        >
+          How to get API key?
+        </a>
+      </p>
+    </div>
+
     <div flex>
       <a
         class="mt-3 flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-amber-300 bg-amber px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-amber-400 hover:bg-amber-300 hover:text-slate-2"
