--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,7 @@ import Github from "./icons/Github";
           border-slate
           border-none
           hover:border-dashed
-          href="https://yesmore.cc"
+          href="https://platform.openai.com/account/api-keys"
           target="_blank"
         >
           How to get API key?
