add error tip and loading icon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ import Github from "./icons/Github";
           href="https://platform.openai.com/account/api-keys"
           target="_blank"
         >
-          How to get API key?
+          How to get api-key?
         </a>
       </p>
     </div>
