--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
 <style is:global>
   html {
     font-family: system-ui, sans-serif;
-    background-color: #f5e6d8;
+    background-color: #f5e6d81;
     color: #ffffff;
   }
   main {
