--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,9 +35,9 @@ import Github from "./icons/Github";
       </p>
     </div>
 
-    <div flex>
+    <div flex mt-3 gap-2>
       <a
-        class="mt-3 flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-amber-300 bg-amber px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-amber-400 hover:bg-amber-300 hover:text-slate-2"
+        class="flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-amber-300 bg-amber px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-amber-400 hover:bg-amber-300 hover:text-slate-2"
         href="https://www.buymeacoffee.com/yesmore"
         target="_blank"
         rel="noopener noreferrer"
@@ -60,7 +60,7 @@ import Github from "./icons/Github";
         <span text-slate-800>Buy me a coffee</span>
       </a>
       <a
-        class="mt-3 ml-3 flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-gray-300 bg-gray-3 px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-gray-500 hover:bg-gray-6 hover:text-slate-2"
+        class="flex max-w-fit items-center justify-center space-x-2 rounded-1 border border-gray-300 bg-gray-3 px-3 py-2 text-sm text-gray-600 shadow-sm transition-colors hover:border-gray-500 hover:bg-gray-6 hover:text-slate-2"
         href="https://github.com/yesmore/QA"
         target="_blank"
         rel="noopener noreferrer"
