--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,16 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import Generator from "../components/Generator";
-import "../styles/message.css";
-import "../styles/tree.css";
+import Layout from "@/layouts/Layout.astro";
+import Header from "@/components/Header.astro";
+import Generator from "@/components/Generator";
+import "@/styles/message.css";
+import "@/styles/tree.css";
 import "katex/dist/katex.min.css";
 import "highlight.js/styles/atom-one-dark.css";
 ---
 
-<Layout title="ChatGPT Q&A">
+<Layout title="QAGPT">
   <main>
     <Header />
     <Generator client:load />
-    <Footer />
   </main>
 </Layout>
