chore: switch to chinese

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import Logo from "./icons/logo.png";
 ---
 
 <header>
-  <div class="flex items-center mt-2">
-    <img mr-1 w-18 src={Logo} />
+  <div class="flex items-center mt-2 -ml-4">
+    <img w-18 src={Logo} />
     <span
       class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
       >Q&A</span
