--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,11 @@ const { title } = Astro.props;
     <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <script defer src="/_vercel/insights/script.js"></script>
+    {
+      import.meta.env.HEAD_SCRIPTS ? (
+        <Fragment set:html={import.meta.env.HEAD_SCRIPTS} />
+      ) : null
+    }
   </head>
   <body>
     <slot />
