upd: add online icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "@/components/Header.astro";
 import Generator from "@/components/Generator";
 import "@/styles/message.css";
 import "@/styles/tree.css";
+import "@/styles/online-dot.css";
 import "katex/dist/katex.min.css";
 import "highlight.js/styles/atom-one-dark.css";
 ---
