--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 ---
+import Recomment from "./Recomment";
 import Logo from "./icons/logo.png";
 ---
 
@@ -6,8 +7,9 @@ import Logo from "./icons/logo.png";
   <div class="flex items-center mt-2 -ml-4">
     <img w-18 src={Logo} />
     <span
-      class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
+      class="text-2xl mr-auto text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
       >Q&A</span
     >
+    <Recomment />
   </div>
 </header>
